classDiagram
  Taxon -- Taxon
  Taxon -- PropertyValue
  Taxon -- DefinedTerm


class Taxon {

  string parentTaxon
  Taxon parentTaxon
  string parentTaxon
  PropertyValue taxonRank
  string taxonRank
  string taxonRank
  string childTaxon
  Taxon childTaxon
  string childTaxon
  DefinedTerm hasDefinedTerm

 }
